# ShellForceAI

./: AGENTS.md  Makefile  OPS.md  README.md  pyproject.toml
config/: default.yaml
docs/: cli.md  codex-integration.md  container-smoke-test.md  interactive-mode.md  model-providers.md  roadmap.md  safety.md  tools.md
examples/: config-openai-codex.yaml
scripts/: demo.sh  dev.sh  lint.sh
src/shellforgeai/: cli.py  version.py
src/shellforgeai/audit/: storage.py
src/shellforgeai/core/: collectors.py  config.py  context.py  diagnose.py  evidence.py  plans.py  profiles.py  session.py
src/shellforgeai/interactive/: __init__.py  banner.py  commands.py  guards.py  repl.py  streaming.py  workspace.py
src/shellforgeai/knowledge/: audits.py  search.py
src/shellforgeai/llm/: base.py  codex.py  codex_events.py  errors.py  manager.py  prompts.py  schemas.py  system_prompt.py
src/shellforgeai/policy/: risk.py
src/shellforgeai/tools/: base.py  disk.py  files.py  firewall.py  host.py  journal.py  logs.py  network.py  process.py  registry.py  services.py  system.py  (+1 more)
tests/: test_audit.py  test_cli.py  test_codex_provider.py  test_config.py  test_context_first_routing.py  test_firewall_routing.py  test_interactive.py  test_interactive_guardrails.py  test_interactive_synthesis.py  test_knowledge.py  test_performance_routing.py  test_policy.py  test_pr10_collectors.py  test_pr2_core.py  test_pr5_model_ux.py  test_pr7_polish.py  test_profiles.py  test_prompt_grounding.py  test_regression_live_feedback.py  test_tools_files.py  test_tools_host.py  test_tools_systemd.py
(+2 files in other folders)
